PackageFileBrowser: fix column width, overflows

--- a/src/public/less/components/package-file-browser.less
+++ b/src/public/less/components/package-file-browser.less
@@ -145,6 +145,9 @@
 
 		>a {
 			color: #79849a;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		label {
