--- a/src/public/less/components/package.less
+++ b/src/public/less/components/package.less
@@ -214,7 +214,8 @@
 
 		.package-config {
 			display: flex;
-			column-gap: 32px;
+			flex-direction: column;
+			row-gap: 32px;
 			padding: 32px;
 			background: #fff;
 			border: 1px solid #dfe3e7;
@@ -222,20 +223,37 @@
 			box-shadow: 0 4px 2px -2px rgba(23, 35, 59, .06), 0 2px 8px rgba(23, 35, 59, .04);
 			border-radius: 6px;
 
+			@media (min-width: @screen-md-min) {
+				flex-direction: row;
+				column-gap: 32px;
+			}
+
 			.c-package-file-browser {
+				order: 2;
 				display: flex;
-				flex-grow: 1;
-				max-width: 736px;
+
+				@media (min-width: @screen-md-min) {
+					order: 1;
+					width: calc(68% - 32px);
+				}
+
+				@media (min-width: @screen-lg-min) {
+					max-width: 736px;
+				}
 			}
 
 			.c-collection-box {
+				order: 1;
 				display: flex;
 				flex-direction: column;
-				width: 260px;
 
 				@media (min-width: @screen-md-min) {
-					width: 100%;
-					max-width: 392px;
+					order: 2;
+					width: 32%;
+				}
+
+				@media (min-width: @screen-lg-min) {
+					width: 392px;
 				}
 			}
 		}
